--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 **/.DS_Store
+teste_a/orchestration/consumption.csv
+teste_a/protocols/temp_file.csv
+ECL/Spray's/Spray Automático/*
+!ECL/Spray's/Spray Automático/spray-automatico.ECL
