--- a/teste_b/processing/requirements.txt
+++ b/teste_b/processing/requirements.txt
@@ -1,7 +1,6 @@
 python-dotenv==1.0.1
 websockets==12.0
-aiocoap==0.4.7
 pymongo==4.6.2
 redis==5.0.2
-paramiko==3.4.0
-aiofiles==23.2.1
+graphene==3.3
+aiohttp==3.9.3
