--- a/teste_a/docker-compose.yml
+++ b/teste_a/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.9'
 
 services:
   redis:
-    container_name: redis
+    container_name: redis_test_a
     image: redis:7.2.4
     ports:
       - "6379:6379"
@@ -11,7 +11,7 @@ services:
     command: redis-server --appendonly yes
 
   mongo:
-    container_name: mongo
+    container_name: mongo_test_a
     image: mongo:7.0.6
     ports:
       - "27017:27017"
