--- a/teste_b/orchestration/Dockerfile
+++ b/teste_b/orchestration/Dockerfile
@@ -4,8 +4,12 @@ WORKDIR /usr/src/app
 
 COPY requirements.txt ./
 
-COPY main.py .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-CMD [ "python", "./main.py" ]
+COPY main.py .
+
+COPY wait-for-it.sh ./wait-for-it.sh
+
+RUN chmod +x ./wait-for-it.sh
+
+CMD ["./wait-for-it.sh", "processing:8765", "--", "python", "./main.py"]
