--- a/teste_b/orchestration/Dockerfile
+++ b/teste_b/orchestration/Dockerfile
@@ -8,8 +8,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY main.py .
 
-COPY wait-for-it.sh ./wait-for-it.sh
-
-RUN chmod +x ./wait-for-it.sh
-
-CMD ["./wait-for-it.sh", "processing:8765", "--", "python", "./main.py"]
+CMD [ "python", "./main.py" ]
