--- a/teste_a/.env
+++ b/teste_a/.env
@@ -12,3 +12,6 @@ PROTOCOLS_PERSIST=1
 
 PROCESSING_REDIS_DB=1
 PROCESSING_PERSIST=1
+
+PROTOCOLS_MONGO_COLLECTION="protocols_data"
+PROCESSING_MONGO_COLLECTION="processing_data"
