--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,4 @@
 **/.DS_Store
-teste_a/orchestration/consumption.csv
-teste_a/protocols/temp_file.csv
 ECL/Spray's/Spray Automático/*
 !ECL/Spray's/Spray Automático/spray-automatico.ECL
 .vscode/
@@ -8,4 +6,4 @@ ECL/Consulta Roxie/GPUCache/*
 ECL/Consulta Roxie/debug.log
 ECL/eclcc.log
 **/__pycache__/
-**/consumption.csv
+fog/local/energy/service/*.csv
