--- a/manager/src/config.json
+++ b/manager/src/config.json
@@ -1,14 +1,14 @@
 {
     "containers": [
         {
-            "name": "nginx",
-            "image": "nginx",
+            "name": "load_balancer",
+            "image": "henriqueabv/load_balancer",
             "type": 1
         },
         {
-            "name": "teste",
-            "image": "nginx",
-            "type": 2
+            "name": "medidor_http_energia",
+            "image": "henriqueabv/http_data_sender",
+            "type": 3
         }
     ]
 }
