--- a/manager/src/jsons/config.json
+++ b/manager/src/jsons/config.json
@@ -9,13 +9,7 @@
             "name": "medidor_http_energia",
             "image": "henriqueabv/http_data_sender",
             "type": 3,
-            "data_id": "energy_data"
-        },
-        {
-            "name": "teste",
-            "image": "henriqueabv/http_data_sender",
-            "type": 3,
-            "data_id": "energy_data"
+            "data_id": "data_energy"
         }
     ]
 }
