--- a/DockerHub/coap_data_sender/Dockerfile
+++ b/DockerHub/coap_data_sender/Dockerfile
@@ -5,6 +5,6 @@ WORKDIR /app
 
 COPY coap_data_sender.py /app
 
-RUN pip install requests
+RUN pip install requests aiocoap
 
 CMD ["python", "coap_data_sender.py"]
