--- a/DockerHub/load_balancer/Dockerfile
+++ b/DockerHub/load_balancer/Dockerfile
@@ -1,7 +1,7 @@
 # Dockerfile
 FROM python:3.9
 WORKDIR /app
-COPY app.py /app
-RUN pip install flask
-EXPOSE 5000
-CMD [ "python3", "-m" , "flask", "run", "--host=0.0.0.0"]
+COPY . /app
+RUN pip install aiohttp aiocoap
+EXPOSE 5000 5683/udp
+CMD ["python3", "app.py"]
