Update versions docker images

--- a/DockerHub/http_data_sender/Dockerfile
+++ b/DockerHub/http_data_sender/Dockerfile
@@ -1,10 +1,6 @@
-# Dockerfile para o HTTP Data Sender
-FROM python:3.9
-
+# Dockerfile
+FROM python:3.13.1-slim
 WORKDIR /app
-
 COPY http_data_sender.py /app
-
 RUN pip install requests
-
 CMD ["python", "http_data_sender.py"]
