--- a/DockerHub/coap_data_sender/Dockerfile
+++ b/DockerHub/coap_data_sender/Dockerfile
@@ -1,14 +1,7 @@
-# Dockerfile para CoAP Sender em Node.js
-FROM node:16
-
+# Dockerfile
+FROM node:22.12.0-slim
 WORKDIR /app
-
-# Instalar dependências
 COPY package.json /app
 RUN npm install
-
-# Copiar o script para o contêiner
 COPY coap_data_sender.js /app
-
-# Comando de inicialização
 CMD ["node", "coap_data_sender.js"]
