--- a/manager/src/jsons/config.json
+++ b/manager/src/jsons/config.json
@@ -3,36 +3,41 @@
         {
             "name": "load_balancer",
             "image": "henriqueabv/load_balancer",
-            "type": 1,
-            "type_display": "Load Balancer"
+            "type": 1
         },
         {
             "name": "medidor_http_energia",
             "image": "henriqueabv/http_data_sender",
             "type": 3,
-            "data_id": "data_energy",
-            "type_display": "Medidor"
+            "data_id": "data_energy"
         },
         {
             "name": "medidor_coap_energia",
             "image": "henriqueabv/coap_data_sender",
             "type": 3,
-            "data_id": "data_energy",
-            "type_display": "Medidor"
+            "data_id": "data_energy"
         },
         {
             "name": "medidor_http_agua",
             "image": "henriqueabv/http_data_sender",
             "type": 3,
-            "data_id": "data_water",
-            "type_display": "Medidor"
+            "data_id": "data_water"
         },
         {
             "name": "medidor_coap_agua",
             "image": "henriqueabv/coap_data_sender",
             "type": 3,
-            "data_id": "data_water",
-            "type_display": "Medidor"
+            "data_id": "data_water"
+        },
+        {
+            "name": "nodo_water",
+            "image": "henriqueabv/fog_water",
+            "type": 2
+        },
+        {
+            "name": "nodo_energy",
+            "image": "henriqueabv/fog_energy",
+            "type": 2
         }
     ]
 }
