--- a/manager/src/.env
+++ b/manager/src/.env
@@ -1,3 +1,5 @@
+# .env
+
 CONFIG_FILE=jsons/config.json
 BAIRROS_MEDIDORES_FILE=jsons/bairros_medidores.json
 DOWNLOAD_URLS_FILE=jsons/download_urls.json
