--- a/DockerHub/aggregator_node/Dockerfile
+++ b/DockerHub/aggregator_node/Dockerfile
@@ -1,43 +1,54 @@
-FROM ubuntu:22.04
+# Dockerfile
 
-# Instala SSH, Python, pip e Supervisor
+# Usa a imagem base Python com Debian Bullseye
+FROM python:3.11.1-bullseye
+
+# Instala dependências do sistema
 RUN apt-get update && apt-get install -y \
-    openssh-server python3 python3-pip supervisor \
+    openssh-server supervisor \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 
-# Cria pasta para o SSHD
+# Configurações do SSHD
 RUN mkdir /var/run/sshd
 
 # Cria um usuário "aggregator_user" e define senha
-RUN useradd -m aggregator_user
-RUN echo "aggregator_user:aggregator_pass" | chpasswd
+RUN useradd -m aggregator_user \
+    && echo "aggregator_user:aggregator_pass" | chpasswd
 
-# Desabilita uso de PAM e permite senha no SSH
-RUN sed -i 's/UsePAM yes/UsePAM no/' /etc/ssh/sshd_config
-RUN sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
+# Configura SSHD para autenticação por senha e nível de log detalhado
+RUN echo "LogLevel VERBOSE" >> /etc/ssh/sshd_config \
+    && sed -i 's/UsePAM yes/UsePAM no/' /etc/ssh/sshd_config \
+    && sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
 
-# Cria diretórios para dados e ajusta permissões
-RUN mkdir -p /home/aggregator_user/data/incoming
-RUN mkdir -p /home/aggregator_user/data/aggregated
-RUN chown -R aggregator_user:aggregator_user /home/aggregator_user/data
+# Cria diretórios para dados e logs, ajusta permissões
+RUN mkdir -p /home/aggregator_user/data/incoming \
+    && mkdir -p /home/aggregator_user/data/aggregated \
+    && mkdir -p /home/aggregator_user/logs \
+    && chown -R aggregator_user:aggregator_user /home/aggregator_user/data \
+    && chown -R aggregator_user:aggregator_user /home/aggregator_user/logs \
+    && chmod -R 755 /home/aggregator_user/data \
+    && chmod -R 755 /home/aggregator_user/logs
 
-# Ajusta permissões para os diretórios de dados
-RUN chmod -R 777 /home/aggregator_user/data/incoming
-RUN chmod -R 777 /home/aggregator_user/data/aggregated
-
-# Instala dependências Python (incluindo paramiko para SFTP)
+# Instala dependências Python
 COPY requirements.txt /app/requirements.txt
-RUN pip3 install --no-cache-dir -r /app/requirements.txt
+RUN pip install --no-cache-dir -r /app/requirements.txt
 
-# Copia configuração do Supervisor
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
-
-# Copia o agregador
+# Copia os arquivos do projeto
 WORKDIR /app
-COPY app.py /app/
+COPY . /app/
 
-# Expor a porta 22 para SFTP (SSH)
+# Garante que o arquivo supervisord.conf seja movido para o local correto
+RUN mkdir -p /etc/supervisor/conf.d \
+    && cp /app/supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+
+# Gera chaves SSH (Necessário para SSHD)
+RUN ssh-keygen -A
+
+# Define o usuário padrão como root para o supervisord funcionar corretamente
+USER root
+
+# Expor a porta 22 para o SFTP
 EXPOSE 22
 
 # Inicia o Supervisor
