--- a/DockerHub/aggregator_node/supervisord.conf
+++ b/DockerHub/aggregator_node/supervisord.conf
@@ -1,28 +1,24 @@
+; supervisord.conf
+
 [supervisord]
 nodaemon=true
-logfile=/var/log/supervisord.log
+user=root
+pidfile=/home/aggregator_user/logs/supervisord.pid
+logfile=/home/aggregator_user/logs/supervisord.log
 loglevel=info
 
 ; -----------------------------------------------------------------
 ; Configuração do SSHD
-; Para ocultar os logs do SSHD no terminal do Docker, as linhas de
-; `stdout_logfile` e `stderr_logfile` estão comentadas.
-; Quando quiser ver os logs do SSHD, remova o ponto e vírgula (;) do início das linhas.
 ; -----------------------------------------------------------------
-
 [program:sshd]
 command=/usr/sbin/sshd -D
 autostart=true
 autorestart=true
-stdout_logfile=/var/log/supervisor/sshd_stdout.log
-stderr_logfile=/var/log/supervisor/sshd_stderr.log
+user=root
+stdout_logfile=/home/aggregator_user/logs/sshd_stdout.log
+stderr_logfile=/home/aggregator_user/logs/sshd_stderr.log
 stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
-
-;stdout_logfile=/var/log/supervisor/sshd_stdout.log
-;stderr_logfile=/var/log/supervisor/sshd_stderr.log
-;stdout_logfile_maxbytes=0
-;stderr_logfile_maxbytes=0
 
 ; -----------------------------------------------------------------
 ; Configuração do Aggregator
@@ -34,6 +30,7 @@ stderr_logfile_maxbytes=0
 command=python3 /app/app.py
 autostart=true
 autorestart=true
+user=root
 stdout_logfile=/dev/fd/1              ; Redireciona stdout para o stdout do Docker
 stderr_logfile=/dev/fd/2              ; Redireciona stderr para o stderr do Docker
 stdout_logfile_maxbytes=0              ; Desabilita rotação de logs
