--- a/DockerHub/aggregator_node/supervisord.conf
+++ b/DockerHub/aggregator_node/supervisord.conf
@@ -8,7 +8,7 @@ logfile=/home/aggregator_user/logs/supervisord.log
 loglevel=info
 
 ; -----------------------------------------------------------------
-; Configuração do SSHD
+; SSHD (se precisar rodar SFTP dentro do container)
 ; -----------------------------------------------------------------
 [program:sshd]
 command=/usr/sbin/sshd -D
@@ -21,17 +21,14 @@ stdout_logfile_maxbytes=0
 stderr_logfile_maxbytes=0
 
 ; -----------------------------------------------------------------
-; Configuração do Aggregator
-; Os logs do aggregator são direcionados para o stdout e stderr do Docker,
-; permitindo que você os visualize usando `docker logs`.
+; Aplicação (Rename + Aggregator)
 ; -----------------------------------------------------------------
-
-[program:aggregator]
+[program:app]
 command=python3 /app/app.py
 autostart=true
 autorestart=true
 user=root
-stdout_logfile=/dev/fd/1              ; Redireciona stdout para o stdout do Docker
-stderr_logfile=/dev/fd/2              ; Redireciona stderr para o stderr do Docker
-stdout_logfile_maxbytes=0              ; Desabilita rotação de logs
-stderr_logfile_maxbytes=0              ; Desabilita rotação de logs
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
