--- a/DockerHub/aggregator_node/.env
+++ b/DockerHub/aggregator_node/.env
@@ -1,15 +1,11 @@
 # .env
 
-# Intervalo de agregação em segundos
-AGGREGATION_INTERVAL=600
-
-# Diretórios para agregação de dados
 INCOMING_DIR=/home/aggregator_user/data/incoming
 AGGREGATED_DIR=/home/aggregator_user/data/aggregated
-OUTGOING_FILE=/home/aggregator_user/data/aggregated/aggregated.csv
+AGGREGATION_INTERVAL=60
 
-# Configurações do SFTP
-SFTP_HOST=sftp_server
+SFTP_HOST=localhost
 SFTP_PORT=22
 SFTP_USER=aggregator_user
 SFTP_PASS=aggregator_pass
+REMOTE_PATH=/remote_path
