--- a/DockerHub/load_balancer/Dockerfile
+++ b/DockerHub/load_balancer/Dockerfile
@@ -3,6 +3,6 @@
 FROM python:3.11.1-bullseye
 WORKDIR /app
 COPY . /app
-RUN pip install aiohttp aiocoap
+RUN pip install aiohttp aiocoap requests
 EXPOSE 5000 5683/udp
 CMD ["python3", "app.py"]
