--- a/manager/src/.env
+++ b/manager/src/.env
@@ -4,3 +4,18 @@ CONFIG_FILE=jsons/config.json
 BAIRROS_MEDIDORES_FILE=jsons/bairros_medidores.json
 DOWNLOAD_URLS_FILE=jsons/download_urls.json
 CONTAINER_TYPES_FILE=jsons/container_types.json
+
+AGGREGATOR_PORT=22
+AGGREGATOR_USER=aggregator_user
+AGGREGATOR_PASS=aggregator_pass
+AGGREGATOR_INCOMING_DIR=/home/aggregator_user/data/incoming
+AGGREGATOR_AGGREGATED_DIR=/home/aggregator_user/data/aggregated
+AGGREGATOR_AGGREGATION_INTERVAL=60
+
+HPCC_HOST=192.168.1.135
+HPCC_PORT=22
+HPCC_USER=hpccdemo
+HPCC_PASS=hpccdemo
+HPCC_REMOTE_PATH=/var/lib/HPCCSystems/mydropzone
+
+NODE_SEND_INTERVAL=50
