--- a/DockerHub/load_balancer/Dockerfile
+++ b/DockerHub/load_balancer/Dockerfile
@@ -1,8 +1,22 @@
 # Dockerfile
 
+# Imagem base com Python 3.11
 FROM python:3.11.1-bullseye
+
+# Define diretório de trabalho
 WORKDIR /app
+
+# Copia todo o conteúdo do projeto para dentro do container
 COPY . /app
-RUN pip install aiohttp aiocoap requests
-EXPOSE 5000 5683/udp
+
+# Instala dependências necessárias
+RUN pip install --no-cache-dir aiohttp aiocoap requests
+
+# Expõe as portas:
+# - 5000: HTTP (API REST)
+# - 5683/udp: CoAP (protocolo leve para IoT)
+EXPOSE 5000
+EXPOSE 5683/udp
+
+# Comando padrão para iniciar o sistema
 CMD ["python3", "app.py"]
