--- a/DockerHub/mqtt_data_sender/Dockerfile
+++ b/DockerHub/mqtt_data_sender/Dockerfile
@@ -2,7 +2,7 @@
 
 FROM python:3.11.1-bullseye
 WORKDIR /app
-COPY http_data_sender.py /app
+COPY mqtt_data_sender.py /app
 COPY requirements.txt /app
 RUN pip install -r requirements.txt
-CMD ["python", "http_data_sender.py"]
+CMD ["python", "mqtt_data_sender.py"]
