--- a/manager/Dockerfile
+++ b/manager/Dockerfile
@@ -14,11 +14,8 @@ RUN pip install --no-cache-dir -r requirements.txt
 # Expõe a porta necessárias para o protocolo HTTP
 EXPOSE 5000
 
-# Expõe a porta necessárias para o protocolo CoAP
-EXPOSE 5683/udp
+# Define a pasta onde está o app
+WORKDIR /app/src
 
-# Expõe a porta necessárias para o protocolo MQTT
-EXPOSE 1883
-
-# Comando para iniciar o load balancer
-CMD ["python3", "app.py"]
+# Comando para iniciar o manager
+CMD ["python", "app.py"]
